<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gunual</string>

    <string name="favorite">Favorite</string>
    <string name="compare">To compare</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>

    <string name="add">Add</string>
    <string name="search">search</string>

    <string name="save_button">Save</string>
    <string name="weapon_title">Weapon"s title</string>
    // Table layout
    <string name="country">Country:&#032;&#032;</string>
    <string name="year_of_production">Year of production:&#032;&#032;</string>
    <string name="type_of_bullet">Type of bullet:&#032;&#032;</string>
    <string name="muzzle_velocity">Muzzle velocity:&#032;&#032;</string>
    <string name="effective_range">Effective range:&#032;&#032;</string>
    <string name="feed_system">Feed system:&#032;&#032;</string>
    <string name="length">Length:&#032;&#032;</string>
    <string name="barrel_length">Barrel length:&#032;&#032;</string>
    <string name="weight">Weight:&#032;&#032;</string>
    <string name="rapid_fire">Rapid fire:&#032;&#032;</string>
    <string name="cost">Cost:&#032;&#032;</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="less_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>

    <string name="no_connection_main">Oh shucks!</string>
    <string name="no_connection_description">"Slow or not internet connection.\nPlease check your internet settings"</string>

    <string name="email">gunual@gmail.com</string>
    <string name="phone_number" tools:ignore="TypographyDashes">+7-999-999-99-99</string>

</resources>
