<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".InformationActivity">

            <include layout="@layout/toolbar" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="28dp"
                android:src="@drawable/image" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="28dp"
                android:background="@color/Gray_100"
                android:weightSum="2">

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/country"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/country_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/year_of_production"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/year_of_production_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/type_of_bullet"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/type_of_bullet_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/max_range"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/max_range_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/effective_range"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/effective_range_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/feed_system"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/feed_system_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/length"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/length_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/barrel_length"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/barrel_length_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/weight_loaded"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weight_loaded_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/weight_unloaded"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weight_unloaded_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/rapid_fire"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/rapid_fire_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow android:layout_height="20dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/cost"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/cost_text_view"
                        android:layout_weight="1"
                        android:textColor="@color/blackTextColor"
                        android:textSize="16sp" />

                </TableRow>

            </TableLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_below="@+id/table"
                android:layout_height="wrap_content"
                android:textColor="@color/blackTextColor"
                android:layout_marginTop="10dp"
                android:layout_marginRight="28dp"
                android:layout_marginLeft="28dp"
                android:text="@string/lorem"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
